--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         <button type="submit" class="btn">Get User</button>
       </form>
     </div>
+
+    <div class="card">
+      <h3 class="card-header text-uppercase">Search By Topic</h3>
+      <section class="card-body" id="language-buttons">
+        <button class="btn" data-language="javascript"> JavaScript</button>
+        <button class="btn" data-language="html">HTML</button>
+        <button class="btn" data-language="css">CSS</button>
+      </section> 
+    </div>
   </div>
 
 
